--- a/_doc/notebooks/ml/logreg_voronoi.ipynb
+++ b/_doc/notebooks/ml/logreg_voronoi.ipynb
@@ -1764,7 +1764,7 @@
    "source": [
     "## Diagramme de Voronoï approché\n",
     "\n",
-    "On pousse l'idée implémentée dans le cas de trois classes pour un nombre de classes quelconque. Il n'existe pas de façon générique de diagramme de Voronoï équivalent. On résoud le système linéaire avec une régression quantile et d'autres astuces de calculs à découvrir dans le code de la fonction [voronoi_estimation_from_lr](http://www.xavierdupre.fr/app/mlstatpy/helpsphinx//mlstatpy/ml/voronoi.html)."
+    "On pousse l'idée implémentée dans le cas de trois classes pour un nombre de classes quelconque. Il n'existe pas de façon générique de diagramme de Voronoï équivalent. On résoud le système linéaire avec une régression quantile et d'autres astuces de calculs à découvrir dans le code de la fonction [voronoi_estimation_from_lr](https://sdpython.github.io/doc/mlstatpy/dev/api/ml.html#mlstatpy.ml.voronoi.voronoi_estimation_from_lr)."
    ]
   },
   {
